--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+5/20/2013 (v. 0.5):
++: Fixed calc forecast values.
++: Fixed Translations int table.
+
 5/16/2013 (v. 0.5):
 +: Fixed Opening/Saving file dialog
 
