Small translation fix

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 TODO:
-
-    -: Get name to SwapAction on Level I.
+    -: Add SourceCode Link on Github in About Dialog.
+    -: Add Export HTML reports of Levels.
+    +: Get name to SwapAction on Level I.
 
