--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 TODO:
-    -: Add SourceCode Link on Github in About Dialog.
     -: Add Export HTML reports of Levels.
-    +: Get name to SwapAction on Level I.
+    +: Fix avrg_forecast mu and alpha
+    +: Add SourceCode Link on Github in About Dialog.
+    +: Get normal names to SwapAction on Level I.
 
