--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+5/26/2013 (v. 0.5):
++: Fix DataBaseEngine
++: Add dynamic count of sensors
+
 5/24/2013 (v. 0.5):
 +: Fixed avrg forecast vectors.
 +: Try Level II of decomposition.
