Fix colors and size

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+5/27/2013 (v. 0.57):
++: Fixed size line charts and colors (chars and table)
+
 5/26/2013 (v. 0.56):
 +: Added NumSensorsDialog [Experimental]
 +: Fixed DataBaseEngine
@@ -41,7 +44,7 @@
 
 3/26/2013 (v. 0.43):
 +: Added plot into tab5
-+: Calculate "Alfa"
++: Calculate "Alpha"
 
 3/21/2013 (v. 0.42):
 +: Added statusBar (footer)
