--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+7/11/2013 (v. 0.61):
++: Fixed OpenGL texture bug
++: Added simple help browser
+
 7/9/2013 (v. 0.6):
 +: Fixed Bug with connect to SQLite DataBase
 
